# Analysis-of-schools-in-each-borough-of-NYC

./: DataAnalysis.ipynb  README.md  analysis.ipynb  pyproject.toml
src/: data_summary.py  exploratoryanalysis.py  inference.py
src/data_analysis/: DataAnalysis.ipynb  data_preprocessing.py  data_summary.py  exploratoryanalysis.py  inference.py  scikit_learn.py
src/nyc_school_analysis/: school_eda.py  school_inference.py  school_predict.py  school_preprocess.py  school_summary.py
