[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Analysis-of-schools-in-each-borough-of-NYC"
dynamic = ['version']
description = "Performing EDA,solved Researched Questions by using Data-Aggregation-Grouping-Reshaping on dataset"
authors = [{name = "Nikki Rastogi", email = "nrastog1@mail.yu.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/nikkirastogi"
repository = "https://github.com/nikkirastogi/Analysis-of-schools-in-each-borough-of-NYC/tree/main/src"
documentation = "https://github.com/nikkirastogi/Analysis-of-schools-in-each-borough-of-NYC/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.3.3"
numpy = "^1.21.0"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
