[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Analysis-of-schools-in-each-borough-of-NYC"
authors = [{name = "Nikki Rastogi", email = "nrastog1@mail.yu.edu"}]
version = "0.1.0"
description = "Performing EDA,solved Researched Questions by using Data-Aggregation-Grouping-Reshaping on dataset"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn=0.11",
]


[project.urls]
homepage = "https://github.com/nikkirastogi"
repository = "https://github.com/nikkirastogi/Analysis-of-schools-in-each-borough-of-NYC/tree/main/src"
documentation = "https://github.com/nikkirastogi/Analysis-of-schools-in-each-borough-of-NYC/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]